--- a/components/spinner/spinner.html
+++ b/components/spinner/spinner.html
@@ -1,5 +1,5 @@
 <div class="spinner">
-  <div class="spinner-container">
+  <div class="spinner-div">
     <i class="fas fa-spinner fa-pulse"></i>
   </div>
 </div>
