--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -34,6 +34,6 @@
     </ul>
   </div>
   <div class="footer-copyright">
-    <p>copyright <i class="far fa-copyright"></i> 2021 justGreatBeers.com</p>
+    <p>copyright <i class="far fa-copyright"></i> <span></span> justGreatBeers.com</p>
   </div>
 </footer>
