--- a/components/carousel-description/carousel-description.css
+++ b/components/carousel-description/carousel-description.css
@@ -2,12 +2,17 @@
   position: relative;
   width: 100%;
   height: 250px;
-  background-color: #aaaaaa;
+  /* background-color: #aaaaaa; */
+  /* background-color: red; */
+  background-image: radial-gradient(circle at 50%, #aaa, #000);
+  /* background-size: 48px 48px; */
+  /* background-position: 50% 50%; */
+  /* background-repeat: no-repeat; */
 }
 
 .carousel .carousel-background {
   background-color: #207ac4;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   position: absolute;
   left: 50%;
   top: 50%;
@@ -71,6 +76,9 @@
   width: 100%;
   height: 240px;
   display: table;
+  padding: 2em 1em;
+  border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
 }
 
 .carousel-description .carousel-description-details::before {
@@ -81,8 +89,10 @@
   transform: translateX(-50%);
   width: 50%;
   height: 2px;
-  margin: auto auto 1rem auto;
-  background-color: dodgerblue;
+  /* margin: auto auto 1rem auto; */
+  /* margin: 2em auto auto auto; */
+  /* background-color: dodgerblue; */
+  background-color: #773ed3;
 }
 
 .carousel-description .carousel-description-details {
@@ -91,7 +101,7 @@
   padding: 1rem;
   font-variant: small-caps;
   text-align: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   vertical-align: middle;
   text-indent: 16px;
   opacity: 0;
@@ -101,17 +111,26 @@
 
 .carousel-description .carousel-description-details h3 {
   position: relative;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1em;
+  margin-top: 1em;
   text-shadow: 2px 0px 2px #777777;
   color: #773ed3;
   text-decoration: underline;
   display: inline-block;
   text-indent: 0px;
   cursor: pointer;
+  transition: transform .5s;
+}
+
+.carousel-description .carousel-description-details h3:hover {
+  transform: scale(1.1);
+  transition: transform .5s;
 }
 
 .carousel-description .carousel-description-details p {
   text-align: center;
+  color: #555;
+  margin-bottom: 1em;
 }
 
 .carousel-description .carousel-description-details::after {
@@ -122,5 +141,7 @@
   transform: translateX(-50%);
   width: 50%;
   height: 2px;
-  background-color: dodgerblue;
+  /* margin: auto auto 2em auto; */
+  /* background-color: dodgerblue; */
+  background-color: #773ed3;
 }
