--- a/components/header/header.css
+++ b/components/header/header.css
@@ -3,11 +3,14 @@ header {
   top: 0;
   z-index: 20;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 0.25rem 1rem;
-  background: linear-gradient(180deg, #ffffff 50%, #aaaaaa 100%);
-  background-color: #ffffff;
-  border-bottom: 1px solid black;
+  /* background: linear-gradient(180deg, #ffffff 50%, #aaaaaa 100%); */
+  /* background: linear-gradient(180deg, #333 50%, #aaa 100%); */
+  /* background-color: #ffffff; */
+  background-color: #333;
+  border-bottom: 1px solid #aaa;
   width: 100%;
   height: calc(50px + 0.5rem);
 }
@@ -32,11 +35,12 @@ header .header-menu {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  width: 50px;
-  min-width: 50px;
-  height: 50px;
-  background-color: #000000;
-  padding: 1rem;
+  width: 35px;
+  min-width: 35px;
+  height: 35px;
+  background-color: #111;
+  /* padding: 1rem; */
+  padding: .25em;
   border-radius: 5px;
   border: 1px solid #ffffff00;
 }
