--- a/styles/common.css
+++ b/styles/common.css
@@ -7,6 +7,11 @@
   color: unset;
 }
 
+body {
+  font-size: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .display-none {
   display: none;
 }
