--- a/styles/about.css
+++ b/styles/about.css
@@ -7,21 +7,20 @@
   text-align: center;
   font-variant: small-caps;
   font-weight: bold;
+  color: #aaa;
+  text-shadow: 2px 2px 2px #777;
 }
 
 .wrapper .about-container {
-  display: inline-flex;
-  flex-wrap: wrap;
-  margin: -12px 0 0 -12px;
-  width: calc(100% + 12px);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 16px;
 }
 
 .wrapper .about-container .about-card {
-  width: calc(50% - 12px);
   height: 250px;
-  background-color: #111111;
-  padding: 1rem;
-  margin: 12px 0 0 12px;
+  background-color: #333;
+  padding: 1em;
   border-radius: 7px;
   box-shadow: 4px 4px 6px #000000;
 }
@@ -55,7 +54,7 @@
   padding: .25rem;
   border: 1px solid #ffffff;
   border-radius: 50%;
-  background-color: #111111;
+  background-color: #333;
 }
 
 .wrapper .about-container .about-card .about-card-wrapper .about-card-caption::before {
@@ -68,7 +67,7 @@
 
 .wrapper .about-container .about-card .about-card-wrapper .about-card-caption {
   flex-grow: 1;
-  background-color: #111111;
+  background-color: #333;
   color: white;
   font-weight: bold;
   text-align: center;
@@ -78,9 +77,5 @@
 @media only screen and (min-width: 620px) {
   .wrapper {
     padding: 0rem 1rem 1rem 1rem;
-  }
-
-  .wrapper .about-container .about-card {
-    width: calc(33.333333% - 12px);
   }
 }
