--- a/styles/products.css
+++ b/styles/products.css
@@ -1,8 +1,9 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 1rem;
-  padding: 4.5rem 1rem 1rem 1rem;
+  /* grid-template-columns: 1fr; */
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 1em;
+  padding: 4.5em 1em 1em 1em;
 }
 
 .beer-card {
@@ -13,7 +14,7 @@
   border: 1px solid black;
   background-color: #111111;
   border-radius: 7px;
-  font-variant: small-caps;
+  /* font-variant: small-caps; */
   box-shadow: 2px 2px 2px #777777;
 }
 
@@ -35,6 +36,7 @@
   flex-direction: column;
   background-color: #dfdfdf;
   border-left: 1px solid black;
+  font-size: min(.75em, 4.25vw);
 }
 
 .details div {
@@ -59,14 +61,15 @@
 
 @media only screen and (min-width: 620px) {
   .wrapper {
-    grid-template-columns: 1fr 1fr;
-    padding: 1rem;
+    /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    padding: 1em;
   }
 }
 
-@media only screen and (min-width: 820px) {
+/* @media only screen and (min-width: 820px) {
   .wrapper {
     grid-template-columns: 1fr 1fr 1fr;
     padding: 1rem;
   }
-}
+} */
