--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -9,28 +9,28 @@
   </div>
   <div class="footer-links">
     <ul>
-      <li>Link 1</li>
-      <li>Link 2</li>
-      <li>Link 3</li>
-      <li>Link 4</li>
-      <li>Link 5</li>
-      <li>Link 6</li>
+      <li><a href="#">Link 1</a></li>
+      <li><a href="#">Link 2</a></li>
+      <li><a href="#">Link 3</a></li>
+      <li><a href="#">Link 4</a></li>
+      <li><a href="#">Link 5</a></li>
+      <li><a href="#">Link 6</a></li>
     </ul>
     <ul>
-      <li>Link 1</li>
-      <li>Link 2</li>
-      <li>Link 3</li>
-      <li>Link 4</li>
-      <li>Link 5</li>
-      <li>Link 6</li>
+      <li><a href="#">Link 7</a></li>
+      <li><a href="#">Link 8</a></li>
+      <li><a href="#">Link 9</a></li>
+      <li><a href="#">Link 10</a></li>
+      <li><a href="#">Link 11</a></li>
+      <li><a href="#">Link 12</a></li>
     </ul>
     <ul>
-      <li>Link 1</li>
-      <li>Link 2</li>
-      <li>Link 3</li>
-      <li>Link 4</li>
-      <li>Link 5</li>
-      <li>Link 6</li>
+      <li><a href="#">Link 13</a></li>
+      <li><a href="#">Link 14</a></li>
+      <li><a href="#">Link 15</a></li>
+      <li><a href="#">Link 16</a></li>
+      <li><a href="#">Link 17</a></li>
+      <li><a href="#">Link 18</a></li>
     </ul>
   </div>
   <div class="footer-copyright">
