--- a/styles/beerDetails.css
+++ b/styles/beerDetails.css
@@ -6,32 +6,32 @@ body {
   background: linear-gradient(0deg, #b5a1ff 33.3%, #7650ff 66.6%, #410dff 100%);
   background-color: #410dff;
   background-attachment: fixed;
-  min-height: 100%;
-  display: table;
+  min-height: 100vh;
 }
 
 .wrapper {
-  display: table-cell;
-  vertical-align: middle;
+  display: grid;
+  place-content: center;
   padding: 1rem;
+  font-size: min(1em, 3.5vw);
+  min-height: 100vh;
 }
 
 .beer-card {
-  display: table-cell;
-  min-width: 200px;
+  height: 100%;
   background-color: #161616;
   border-radius: 5px;
+  margin: auto;
   padding: 1rem;
 }
 
 .beer-card .beer-card-img {
-  height: 250px;
   background-color: #aaaaaa;
   text-align: center;
   border-radius: 5px;
 }
 
-.beer-card .beer-card-img img {
+.beer-card-img img {
   max-width: 100%;
   height: 250px;
   object-fit: contain;
@@ -62,7 +62,7 @@ body {
   padding: 18px;
   width: 100%;
   outline: none;
-  font-size: 15px;
+  font-size: min(1em, 3.5vw);
   font-weight: bolder;
   border-radius: 5px;
 }
@@ -116,12 +116,18 @@ td {
   width: 100%;
   text-align: center;
   outline: none;
-  font-size: 15px;
   font-weight: bolder;
   border-radius: 5px;
   margin-top: 1rem;
+  font-size: min(1em, 3.5vw);
 }
 
 #back-btn:hover {
   background-color: #1dad41;
+}
+
+@media only screen and (min-width: 620px) {
+  .beer-card {
+    width: 50%;
+  }
 }
