modified nav-bar.html, and commom.js for test redirect github pages

--- a/components/nav-bar/nav-bar.html
+++ b/components/nav-bar/nav-bar.html
@@ -2,17 +2,17 @@
   <div class="navigation">
     <ul>
       <li><a href="/">HOME</a></li>
-      <li id="products"><a href="/pages/products.html" name="products">PRODUCTS</a></li>
-      <li><a href="/pages/services.html" name="services">SERVICES</a></li>
-      <li><a href="/pages/about.html" name="about">ABOUT</a></li>
-      <li><a href="/pages/contact.html" name="contact">CONTACT</a></li>
-      <li><a href="/pages/help.html" name="help">HELP</a></li>
+      <li id="products"><a href="/static-beer-products/pages/products.html" name="products">PRODUCTS</a></li>
+      <li><a href="/static-beer-products/pages/services.html" name="services">SERVICES</a></li>
+      <li><a href="/static-beer-products/pages/about.html" name="about">ABOUT</a></li>
+      <li><a href="/static-beer-products/pages/contact.html" name="contact">CONTACT</a></li>
+      <li><a href="/static-beer-products/pages/help.html" name="help">HELP</a></li>
     </ul>
   </div>
   <div class="register">
     <ul>
-      <li><a href="/pages/login.html" name="login">LOGIN</a></li>
-      <li><a href="/pages/singUp.html" name="signup">SIGN UP</a></li>
+      <li><a href="/static-beer-products/pages/login.html" name="login">LOGIN</a></li>
+      <li><a href="/static-beer-products/pages/singUp.html" name="signup">SIGN UP</a></li>
     </ul>
   </div>
 </nav>
