--- a/components/nav-bar/nav-bar.css
+++ b/components/nav-bar/nav-bar.css
@@ -8,6 +8,7 @@
   background-color: #000000;
   color: #ffffff;
   font-weight: bold;
+  font-size: min(1em, 5.5vw);
   text-align: center;
   visibility: hidden;
   opacity: 0;
@@ -25,12 +26,18 @@
   width: 100%;
 }
 
+#nav-bar .navigation {
+  align-items: flex-end;
+  padding-bottom: 1em;
+}
+
 #nav-bar .register {
   align-items: baseline;
+  padding-top: 1em;
 }
 
 #nav-bar li {
-  padding: 0.2rem 1rem;
+  padding: 0.3rem 1rem;
   border: 1px solid #ffffff00;
 }
 
